# python-starter-template

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.docs  README.md  SECURITY.md  Taskfile.yml  compose.yml  mkdocs.yml  pyproject.toml  ruff.toml  uv.toml
.github/workflows/: build.yml
app/: __init__.py
docs/: index.md
tests/: test_app_import.py  test_root.py
