[project]
name = "a-python-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.121.2",
    "ipykernel>=6.31.0",
    "pip>=25.3",
    "uvicorn>=0.38.0",
]


[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-cov>=7.0.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["app"]
